--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+GOOGLE_CLIENT_ID="629781500621-huvblif3dgs248hthug9mdbmcj0br5sp.apps.googleusercontent.com"
+GOOGLE_SECRET=5WKf-BcK38dwSMTXVRnjvyTp
+GOOGLE_REDIRECT="http://localhost:8000/auth/google/callback"
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
